# ForgeML

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING_REPORT_IDENTITY_AUTH.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  PLATFORM_READINESS_REPORT.md  PROJECT_STATUS.md  README.md  SECURITY.md
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0d7adf1f94cf_module_2_metadata_layer.py  1a2b3c4d5e6f_module_4_analyzed_contract.py  2f6b4b3d36ac_module_5_deployment_tables.py  3c7d8e9f0a1b_epic_1_identity_and_authentication.py
backend/src/forgeml/: __init__.py  __main__.py  bootstrap.py
backend/src/forgeml/api/: __init__.py  authentication.py  error_handlers.py  health.py  middleware.py  schemas.py
backend/src/forgeml/application/: __init__.py  unit_of_work.py
backend/src/forgeml/core/: __init__.py  composition.py  config.py  correlation.py  errors.py  logging.py  principal.py
backend/src/forgeml/domain/: __init__.py
backend/src/forgeml/identity/: __init__.py  __main__.py
backend/src/forgeml/infrastructure/: __init__.py
backend/tests/: conftest.py  fake_runtime.py  fakes.py  packages.py  support.py
backend/tests/architecture/: test_dependency_direction.py
backend/tests/contract/: test_http_contract.py  test_openapi_contract.py  test_package_fixtures.py  test_port_conformance.py
backend/tests/integration/api/: conftest.py  test_application_boot.py  test_authentication_boundary.py  test_deployments_api.py  (+7 more)
backend/tests/smoke/: conftest.py  installed_package_smoke.py  test_api_smoke.py
(+225 files in other folders)
